Fri Feb 11 10:26:25 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (remad_std_file): Close oldfd first, in case we've
	run out of fd and do dup2 if the newfd isn't what we were
	looking for.  Thanks to Hermann Peifer <peifer@gmx.eu> for
	the bug report.

Thu Feb 10 21:31:36 2011  Andreas Buening    <andreas.buening@nexgo.de>

	* main.c (load_procinfo): Fix warning about unsed variables in
	don't have multiple groups.
	* protos.h: Move decls for many standard functions here if
	they aren't in the header files (OS/2) and bracket inside
	#ifndef STDC_HEADERS.
	* io.c (devopen): Remove decl of strtoul.
	* field.c (set_FIELDWIDTHS): Same.
	* awk.h: Always include protos.h.

Tue Feb  8 22:46:22 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* array.c, builtin.c, eval.c: Equalize message strings and
	fix a typo. Thanks to Benno Schulenberg <bensberg@justemail.net>.

Mon Feb  7 11:23:33 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y (next_sourcefile): Comment out assertion that
	lexeof is true; causes core dump on user typos of bad
	characters which previous versions did not do. Thanks to
	Pat Rankin for the report.

	* re.c (expand_range): Allow for ^ as first character
	inside range. Thanks for Nelson Beebe for the bug report.

Fri Feb  4 10:28:19 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* README.cvs: Udpated.
	* Checklist: New file for storage in the git repository.

Wed Feb  2 20:34:41 2011  Corinna Vinschen  <vinschen@redhat.com>

	* awkgram.y (free_bc_internal): Remove unused variable.

Tue Feb  1 23:13:10 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* bootstrap.sh: No need to find aclocal.m4, just touch it.

Tue Feb  1 23:05:51 2011  Corinna Vinschen  <vinschen@redhat.com>

	Make values of ctype macros into unsigned char to fix
	warnings found on Cygwin / Newlib.

	* array.c (array_init): Add cast.
	* awkgram.y: Ditto.
	* awkprintf.h: Ditto.
	* builtin.c (sub_common, nondec2awknum): Ditto.
	* command.y: Ditto.
	* eval.c (fmt_ok): Ditto.