@@ -518,6 +518,8 @@ EXTRA_DIST = \
 	prdupval.in \
 	prdupval.ok \
 	profile2.ok \
+	profile3.awk \
+	profile3.ok \
 	prec.awk \
 	prec.ok \
 	printf0.awk \
@@ -1319,6 +1321,12 @@ profile1:
 profile2:
 	@echo $@
 	@$(PGAWK) -f $(srcdir)/xref.awk $(srcdir)/dtdgport.awk > /dev/null
+	@sed 1,2d < awkprof.out > _$@; rm awkprof.out
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+profile3:
+	@echo $@
+	@$(PGAWK) -f $(srcdir)/$@.awk > /dev/null
 	@sed 1,2d < awkprof.out > _$@; rm awkprof.out
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
 
