@@ -1,0 +1,9 @@
+BEGIN {
+	the_func = "p"
+	print @the_func("Hello")
+}
+
+function p(str)
+{
+	print "! " str " !"
+}
