@@ -1,3 +1,8 @@
+Sun Feb 13 19:55:15 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* Makefile.am (profile3): New test.
+	* profile3.awk, profile3.ok: New files.
+
 Fri Feb 11 10:29:48 2011  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (manyfiles): Bump limit up above 1024, which is
